--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,11 +8,11 @@
 
   <title>The Flatiron School</title>
 
-  <link rel='stylesheet' href="css/style.css" type='text/css' media='all' />
+  <link rel='stylesheet' href="/css/style.css" type='text/css' media='all' />
   <!-- <link rel='stylesheet' href="css/style-dark.css" type='text/css' media='all' /> -->
-  <link rel='stylesheet' href="css/media-queries.css" type='text/css' media='all' />
-  <link rel='stylesheet' href="css/flexslider.css" type='text/css' media='screen' />
-  <link rel='stylesheet' href="css/font-awesome.css" type='text/css' media='screen' />
+  <link rel='stylesheet' href="/css/media-queries.css" type='text/css' media='all' />
+  <link rel='stylesheet' href="/css/flexslider.css" type='text/css' media='screen' />
+  <link rel='stylesheet' href="/css/font-awesome.css" type='text/css' media='screen' />
   <link rel='stylesheet' id='google_merriweather-css'  href='http://fonts.googleapis.com/css?family=Merriweather:400,700&ver=3.5' type='text/css' media='all' />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <script type='text/javascript' src="js/comment-reply.min.js"></script>
@@ -104,12 +104,16 @@
 
               
               <%= yield %>
+              <br>
 
               <!-- Begin 3 Student Row -->
 
 
             </ul>
           </div>
+            <div>
+              <a href="/students/new" >Create new student </a>
+            </div>
         </div>
       </div>
       <!-- End Student Index -->
